--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: webserver-simple
-        image: docker.io/kostiscodefresh/containous/whoami:latest
+        image: docker.io/containous/whoami:latest
         ports:
         - containerPort: 8080
