--- a/simple-app/deployment.yml
+++ b/simple-app/deployment.yml
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       labels:
-        app: trivial-go-web-app777
+        app: trivial-go-web-app
     spec:
       containers:
       - name: webserver-simple
